@@ -1,3 +1,8 @@
+2000-09-13  Dave Peticolas  <dave@krondo.com>
+
+	* src/SplitLedger.c (xaccSRSaveChangedCells): don't copy memo
+	and action to other split.
+
 2000-09-12  Dave Peticolas  <dave@krondo.com>
 
 	* src/gnome/dialog-transfer.c (gnc_xfer_dialog_close_cb):
